change #401: credential sandbox を既定 ON にし、MITM 対象を「credential を設定した宛先」に限定
これまでは EMULIN_EGRESS_MITM=1 を置き忘れると無言で丸ごと無効化され、
かつ有効時は cert の SAN 一覧 (claude.ai / statsig / console / localhost) を
まとめて TLS 終端していた。「常に有効」「credential のある宛先だけ横取り」に変える。

- Egress.enabled(): 既定 true。EMULIN_EGRESS_MITM=0|false|off|no で明示的に停止。
- MITM allowlist を CredentialStore.NAME_HOSTS (credential 名 -> 送り先) から導出:
    ANTHROPIC_API_KEY / CLAUDE_CODE_OAUTH_TOKEN -> api.anthropic.com
    OPENAI_API_KEY                              -> api.openai.com
  credential が 0 件なら allowlist は空。Kernel は Egress ごと持たず、CA 生成も
  TLS 終端も一切起こらない (= credential 未設定のユーザには従来と完全に同じ挙動)。
  claude.ai の OAuth や statsig のテレメトリは横取り対象から外れ素通しになる
  (h2-only client を ALPN で弾いてしまう危険も同時に消える)。
- 送り先の分からない credential 名は警告し MITM しない (placeholder が実 server に
  届くだけ、と明示)。
- 起動時に守っている対象を 1 行表示 ([egress] credential sandbox: NAME->host)。
  無言で守られていない状態を作らないための計器。
- prepareGuest は成功時のみ true を返し、Kernel はそのときだけ egress を保持する。
  catch を Throwable に拡大: launcher の --add-exports が無いと sun.security.x509 への
  linkage が IllegalAccessError (Error) になり catch(Exception) を素通りして boot ごと
  落ちるため。今は理由を出して MITM 無しで起動を続ける。
- launcher: 既定 ON に合わせ add-exports を常に渡し、前 commit の自動有効化ブロックは
  不要になったので削除。EmulinCA.DEFAULT_SAN_HOSTS に api.openai.com を追加
  (SAN は MITM 対象の上位集合。不足時は sanCovers が false になり keystore 自動再生成)。

検証 (実機 Windows/WHP、bundle、env 一切なし):
- `[egress] credential sandbox: CLAUDE_CODE_OAUTH_TOKEN->api.anthropic.com` +
  guest env に placeholder + NODE_EXTRA_CA_CERTS を確認。
- guest curl: api.anthropic.com は intercept(v6)->TLS ok 両側->HTTP 405 (実 API 応答)、
  claude.ai は intercept 行なしで素通り->HTTP 403。狙い通りの選択的 MITM。
- keystore は SAN 追加で自動再生成され、guest ca-bundle の emulin CA block は 1 個
  (#765 の重複対策が効いていることも確認)。
- policy 単体: credential 1 件で mitmHosts=[api.anthropic.com]、他は ALLOW、
  credential 0 件で空、未知名は unmapped として検出。
- add-exports 無しで credential ありの boot: IllegalAccessError を握って理由を表示し
  boot 継続。EMULIN_EGRESS_MITM=0: note を出して注入なし。
- run-fast 296/2 (asurvey 2 件は並列負荷 flake。